docroot/themes/custom/limestone/scss/modules/_menu-main-region.scss
/* ... */
@include breakpoint(medium) {
  a.lc-mobile-menu-toggle {
    display: none
  }
  .expander-hidden + .expander-content {
    display: block;
  }
  nav.sub-menu-block, nav.menu--desktop-megamenu {
    background-color: #fff;
    position: relative;
    text-transform: uppercase;
    font-size: 1rem;

    a {
      color: $limestone-blue;
      &.menu-title {
        color: $category;
        padding-right: 0.5rem;
      &:after {
          font-family: 'icomoon' !important;
          speak: none;
          content: "\ea34";
          color: $category;
          font-size: 15px;
          left: 0.3rem;
          bottom: 1px;
          position: relative;
        }
      }
    }

    > ul.menu {
      padding: 0 0.2em;
      margin: 0 auto;
      max-width: $global-width;
      a {
        //padding: 0.7rem 0.5rem;
      }
    }
  }
  li {
    &:hover,
    &:focus,
    &.menu-focus,
    &.menu-hover {
      > a {
        color: $success-color;
      }
    }
  }
  // Dropdowns
  > ul.menu > li.is-dropdown-submenu-parent {
    // &:last-child
    //  > a
    //    padding-right: 0
    > a {
      padding-right: 1em;

      &::before {
        // Icon-chevron-down
        content: "\f078";
        font-size: 0.8rem;
        position: absolute;
        right: 0.2rem;
        top: 0.8rem;
        font-family: "icomoon" !important;
        speak: none;
        font-style: normal;
        font-weight: normal;
        font-variant: normal;
        text-transform: none;
        line-height: 1;
        /* Better Font Rendering =========== */
        -webkit-font-smoothing: antialiased;
        -moz-osx-font-smoothing: grayscale;
      }
    }

    &:hover,
    &:focus,
    &.menu-focus,
    &.menu-hover {
      > a {
        color: $success-color;

        &::before {
          //icon-arrow-right2
          content: "\ea34";
        }
      }
    }
  }
}
@include breakpoint(large) {
  nav.sub-menu-block, nav.menu--desktop-megamenu {
    font-size: 1.3rem;
    > ul.menu {
      a {
        //padding: 0.7rem 1rem;
      }
    }
    // Dropdowns
    > ul.menu > li.is-dropdown-submenu-parent {
      > a {
        padding-right: 1.5em;

        &::before {
          // Icon-chevron-down
          top: 0.9rem;
          right: 0.5rem;
        }
      }
    }
  }
}
@include breakpoint(xxlarge) {
  nav.sub-menu-block, nav.menu--desktop-megamenu {
    font-size: 1.6rem;
  }
}

// HIDE SHOW MAIN MENU REGIONS
.main-menu-region {
  .show-for-desktop-menu, .title-bar {
    display: none !important;
  }
  .title-bar.show-for-mobile-menu {
    display: block !important;
    button .title-bar-title {
      padding-left: 26px;
      color: $limestone-blue;
    }
  }
  @include breakpoint(medium) {
    nav.show-for-desktop-menu {
      display: block !important;
    }
    nav.show-for-mobile-menu, .title-bar.show-for-mobile-menu {
      display: none !important;
    }
  }
}


$expander-arrow-width: 0.7em;
$expander-toggle-size: 1em;
$expander-toggle-arrow-size: $expander-toggle-size;
$expander-toggle-margin: 1em;

@include breakpoint(medium down) {

  .title-bar {
    background: $white;
    color: $limestone-blue;
    border-bottom: 1px solid $limestone-blue;
    .menu-icon::after {
      background: $limestone-blue;
      box-shadow: 0 7px 0 $limestone-blue, 0 14px 0 $limestone-blue;
    }
  }


  .expander {
    width: 100%;
    float: right;
    z-index: 3;
    position: relative;
    background: white;
    //border-bottom: 2px solid $limestone-blue;
  }

  .expander-trigger {
    //border-bottom: 1px solid $light-gray
    position: relative;
    color: $limestone-blue;
    cursor: pointer;
    display: block;
    float: right;
    font-size: $expander-toggle-size;
    height: 2.6rem;
    padding: 0.1rem 1.2rem 0;
    text-decoration: none;
    user-select: none;

    &.expander-hidden {

    }

    &:focus, &:hover {
      transition: none;
      color: $success-color;
    }

    &::before {
      content: "";
      position: absolute;
      right: 77px;
      top: 6px;
      width: 20px;
      height: 40px;
      background: url(/themes/custom/limestone/images/lc-sprite.svg) no-repeat -631px 6px transparent;
      background-size: 651px !important;
    }

    &::after {
      // Icon-chevron-down
      content: "\f078";
      position: absolute;
      top: 20px;
      right: 28px;
      font-family: "icomoon" !important;
      speak: none;
      font-style: normal;
      font-weight: normal;
      font-variant: normal;
      text-transform: none;
      font-size: 1.3rem;
      line-height: 1.5rem;

      -webkit-font-smoothing: antialiased;
      -moz-osx-font-smoothing: grayscale;
    }
  }

  .expander-content {
    clear: both;
    border-top: 2px solid $limestone-blue;

    a {
      text-decoration: none;
    }

    .is-drilldown {
      max-width: none !important;
      height: auto !important;
    }
    .is-drilldown-submenu {
      border-top: none;
    }
    .vertical.drilldown {
      height: auto;
    }
  }

  .expander-hidden + .expander-content {
    display: none;
  }
}

nav.menu--desktop-megamenu {
  ul.submenu.is-dropdown-submenu {
    //min-width: 960px;
    border-left: thin solid #d2d2d2;
    border-right: thin solid #d2d2d2;
    border-bottom: thin solid #d2d2d2;
    ul.is-dropdown-submenu.vertical {
      border-left: none;
      border-right: thin solid #d2d2d2;
      border-bottom: thin solid #d2d2d2;
      border-top: thin solid #d2d2d2;
    }
  }
  .field-menu-link-content--field-megasubmenu {
    h6 a {
      padding: 0 0 0 0.2rem;
    }
  }
  .megasubmenu {
    ul > ul li a {
      font-weight: bold;
      font-size: 93%;
      padding: 0 0 3px;
      &:before {
        content: "- ";
      }
    }
  }
}

.is-drilldown {
  overflow-y: visible !important;
}

